--- a/DemoMVC.WebUi/Views/Form/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Form/Index.cshtml
@@ -22,7 +22,7 @@
     @Html.ActionLink("Create New", "Create", "Form", null, new { @class = "btn btn-warning btn rounded-pill px-4 shadow-sm fw-bold m-3" })
     <button class="btn btn-outline-success btn rounded-pill px-4 shadow-sm" onclick="exportToExcel()" style="height:38px; margin-top:15px">Export to Excel</button>
 </div>
-<div class="common_white_box listingpage">
+<div class="common_white_box listingpage m-4">
     <div class="page-loader k-loading-image"></div>
     @(Html.Kendo().Grid<DemoMVC.Models.FormsGridModel>()
             .Name("gridForm")
