--- a/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
+++ b/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
@@ -222,9 +222,8 @@
         @RenderSection("featured", required: false)
         <div class="main_body_content">
             <div class="main_wrapper">
-                <div class="container container-fluid no_space w-100">
-                    @RenderBody()
-                </div>
+                <div> @RenderBody()</div>
+                  
             </div>
         </div>
     </div>
