--- a/DemoMVC.WebUi/Views/Subject/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Subject/Index.cshtml
@@ -26,7 +26,7 @@
     <button class="btn btn-outline-success btn rounded-pill px-4 shadow-sm" onclick="exportToExcel()" style="height:38px; margin-top:15px">Export to Excel</button>
 </div>
 
-<div class="common_white_box listingpage">
+<div class="common_white_box listingpage m-4">
     <div class="page-loader k-loading-image"></div>
     @(Html.Kendo().Grid<DemoMVC.Models.SubjectGridModel>()
           .Name("gridSubjects")
