--- a/DemoMVC.WebUi/Views/Question/_QuestionDetailsPopUp.cshtml
+++ b/DemoMVC.WebUi/Views/Question/_QuestionDetailsPopUp.cshtml
@@ -15,7 +15,10 @@
         .modal-xl {
             max-width: 650px; /* Wider modal */
         }
-
+        .modal-body {
+            max-height: 70vh; /* Adjust as needed */
+            overflow-y: auto;
+        }
         .question-container {
             display: flex;
             flex-direction: column;
