Save Exam And Total Marks Completed

--- a/DemoMVC.WebUi/Views/Home/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Home/Index.cshtml
@@ -47,7 +47,13 @@
                     datasets: [{
                         label: 'Users per Role',
                         data: values,
-                        backgroundColor: ['#00ffff', '#00ff99', '#33ccff', '#ff00ff', '#ff0099']
+                        backgroundColor: [
+                            '#00ffff', '#00ff99', '#33ccff', '#ff00ff', '#ff0099',
+                            '#ff6600', '#66ff66', '#9933ff', '#ffcc00', '#ff3366',
+                            '#3399ff', '#cc33cc', '#99ff33', '#ff3300', '#33ffcc',
+                            '#ffcc99', '#6600ff', '#33cc33', '#ff9900', '#ccff66'
+                        ]
+
                     }]
                 },
                 options: {
