--- a/DemoMVC.WebUi/Views/FormRoleMapping/ViewPermission.cshtml
+++ b/DemoMVC.WebUi/Views/FormRoleMapping/ViewPermission.cshtml
@@ -60,7 +60,10 @@
                 columns.Bound(c => c.AllowUpdate).HeaderHtmlAttributes(new { @class = "center_text" }).ClientTemplate("<div class='checkbox only_checkbox'><input type=\"checkbox\" id='Update_#=MenuId#' #= AllowUpdate? checked='checked':'' # onclick='CheckValue(#=MenuId#);'/><label></label></div>").Width(50).Title("Edit").Filterable(false).Sortable(false);
                 columns.Bound(c => c.AllowDelete).HeaderHtmlAttributes(new { @class = "center_text" }).ClientTemplate("<div class='checkbox only_checkbox'><input type=\"checkbox\" id='Delete_#=MenuId#'  #= AllowDelete? checked='checked':'' # onclick='CheckValue(#=MenuId#);'/><label></label></div>").Width(50).Title("Delete").Filterable(false).Sortable(false);
             })
-            .Pageable()
+            .Pageable(pageable => pageable
+            .Refresh(true)
+            .PageSizes(new[] { 10, 20, 50, 100, 200 })
+            .ButtonCount(5))
             .Sortable()
             .Events(evt => evt
                 .DataBinding("fnKendoGridCommonDataBinding")
@@ -69,7 +72,7 @@
             .AutoBind(true)
             .DataSource(dataSource => dataSource
                 .Ajax()
-                .PageSize(100)
+                .PageSize(10)
                 .Read(read => read.Action("FormRoleMapping_Read", "FormRoleMapping", new { RoleID = Model.RoleId }))
             ))
         </div>
